style.css: fix scrollbar hiding logic

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
   }
 }
 
-@media (min-height: 40em) {
+@media (min-height: 40em) and (min-width: 48em) {
   body {
     overflow-y: hidden;
   }
